--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <h1 id="logo">dev.finance$</h1>
     </header>
 
-    <main>
+    <main class="container">
         <section id="balance">
             <h2>Balanço</h2>
 
-            <div clas="card">
+            <div class="card">
                 <h3>Entradas</h3>
                 <p>R$ 5.000,00</p>
             </div>
-            <div clas="card">
+            <div class="card">
                 <h3>Saídas</h3>
                 <p>R$ 2.000,00</p>
             </div>
-            <div clas="card">
+            <div class="card">
                 <h3>Total</h3>
                 <p>R$ 3.000,00</p>
             </div>
