Finishing the structural and basic styles of the project with HTML and CSS

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <h3>Saídas</h3>
                 <p>R$ 2.000,00</p>
             </div>
-            <div class="card">
+            <div class="card total">
                 <h3>Total</h3>
                 <p>R$ 3.000,00</p>
             </div>
@@ -48,21 +48,21 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Luz</td>
-                        <td>- R$ 500,00</td>
-                        <td>16/01/2021</td>
+                        <td class="description">Luz</td>
+                        <td class="expense">- R$ 500,00</td>
+                        <td class="date">16/01/2021</td>
                     </tr>
 
                     <tr>
-                        <td>Dev. Site</td>
-                        <td>R$ 5.000,00</td>
-                        <td>18/01/2021</td>
+                        <td class="description">Dev. Site</td>
+                        <td class="income">R$ 5.000,00</td>
+                        <td class="date">18/01/2021</td>
                     </tr>
 
                     <tr>
-                        <td>Internet</td>
-                        <td>- R$ 200,00</td>
-                        <td>20/01/2021</td>
+                        <td class="description">Internet</td>
+                        <td class="expense">- R$ 200,00</td>
+                        <td class="date">20/01/2021</td>
                     </tr>
                 </tbody>
             </table>
