--- a/index.html
+++ b/index.html
@@ -48,11 +48,15 @@
         <section id="transaction">
             <h2 class="sr-only">Transações</h2>
             <table id="data-table">
+
+                <a href="#" class="button new">+ Nova Transação</a>
+
                 <thead>
                     <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
                         <th>Data</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -60,18 +64,27 @@
                         <td class="description">Luz</td>
                         <td class="expense">- R$ 500,00</td>
                         <td class="date">16/01/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover transação"> 
+                        </td>
                     </tr>
 
                     <tr>
                         <td class="description">Dev. Site</td>
                         <td class="income">R$ 5.000,00</td>
                         <td class="date">18/01/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover transação"> 
+                        </td>
                     </tr>
 
                     <tr>
                         <td class="description">Internet</td>
                         <td class="expense">- R$ 200,00</td>
                         <td class="date">20/01/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover transação"> 
+                        </td>
                     </tr>
                 </tbody>
             </table>
