Starting JS in the project

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
     </div>
 
-    <footer><p>dev.finances$</p></footer>
+    <footer><p> 2021 - dev.finances$</p></footer>
 
     <script src="scripts.js"></script>
 </body>
