--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="card total">
                 <h3>
-                    <span>Entradas</span>
+                    <span>Total</span>
                     <img src="./assets/total.svg" alt="Image de total">
                 </h3>
                 <p id="totalDisplay">R$ 0,00</p>
